--- a/kinto/config.json
+++ b/kinto/config.json
@@ -2,7 +2,7 @@
     "inbounds": [
         {
             "port": 3000,
-            "protocol": "vmess",
+            "protocol": "vless",
             "settings": {
                 "clients": [
                     {
