--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
             "value": "/"        
         }
     },
-    "website": "https://github.com/mmpuq/v2ray-heroku-vless",
-    "repository": "https://github.com/mmpuq/v2ray-heroku-vless",
+    "website": "https://github.com/uigui34/wer234",
+    "repository": "https://github.com/uigui34/wer234",
     "stack": "container"
 }
